--- a/app/src/main/res/layout/activity_wedding.xml
+++ b/app/src/main/res/layout/activity_wedding.xml
@@ -4,26 +4,26 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Akdh">
+    tools:context=".Wedding">
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:app="http://schemas.android.com/apk/res-auto"
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".Akdh">
+    tools:context=".Wedding">
     <ImageView
         android:layout_width="match_parent"
         android:layout_height="wrap_content"
-        android:src="@drawable/akdh"
-        android:id="@+id/akdh_event"
-        android:layout_marginTop="-110dp"
-        android:layout_marginBottom="20dp"
+        android:src="@drawable/wedding"
+        android:id="@+id/wedding_event"
+        android:layout_marginTop="-130dp"
+        android:layout_marginBottom="-85dp"
         />
     <Button
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/akdh_event"
-        android:id="@+id/akdh_pkg_1"
+        android:layout_below="@id/wedding_event"
+        android:id="@+id/wedding_pkg_1"
         android:text="Normal"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
@@ -33,13 +33,14 @@
         android:textAllCaps="true"
         android:textColor="@android:color/white"
         android:textSize="17sp"
-        />
 
+
+        />
     <Button
-        android:id="@+id/akdh_pkg_2"
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/akdh_pkg_1"
+        android:layout_below="@id/wedding_pkg_1"
+        android:id="@+id/wedding_pkg_2"
         android:text="Medium"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
@@ -49,13 +50,14 @@
         android:textAllCaps="true"
         android:textColor="@android:color/white"
         android:textSize="17sp"
-        />
 
+
+        />
     <Button
         android:layout_width="300dp"
         android:layout_height="wrap_content"
-        android:layout_below="@id/akdh_pkg_2"
-        android:id="@+id/akdh_pkg_3"
+        android:layout_below="@id/wedding_pkg_2"
+        android:id="@+id/wedding_pkg_3"
         android:text="Luxury"
         android:layout_centerHorizontal="true"
         android:layout_marginTop="20dp"
@@ -65,6 +67,8 @@
         android:textAllCaps="true"
         android:textColor="@android:color/white"
         android:textSize="17sp"
+
+
         />
 
 </RelativeLayout>
